# pizza

./: cmd.txt  pyproject.toml  readme  readme.md  requirements.in  requirements.txt  test.sh
pizza/: settings.py  urls.py
shop/: models.py  serializers.py  tests.py  urls.py  views.py
shop/migrations/: 0004_auto_20200108_1348.py
